tests/duarouter/errors/invalid_stops/errors.duarouter
Error: The busStop '0' occurs at least twice.
Quitting (on error).
